--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,36 @@ a{
   color: rgb(255, 123, 0);
   text-decoration: none;
 }
+.navbar{
+  position: fixed;
+  display: flex;
+  justify-content: flex-end;
+  width: 100vw;
+  height: 3rem;
+  z-index: 200;
+  margin: 0;
+  text-align: center;
+  & > .active{
+    border-bottom: 1px solid black;
+  }
+}
+.li {
+  list-style-type: none;
+  margin-right: 3rem;
+  @media (max-width: 500px){
+    margin-right: 1rem;
+  }
+  text-align: center;
+  line-height: 3rem;
+  &:hover {
+    cursor: pointer;
+}
+}
+.li:first-child{
+  margin-right: auto;
+  margin-left: 1rem;
+  border-bottom: none !important;
+}
 .projects{
   
   box-sizing: border-box;
@@ -23,6 +53,7 @@ a{
     justify-content: space-between;
     font-size: 1.5rem;
     text-align: center;
+    position: relative;
     @media (min-width: 1024px){
       padding: 0;
     }
@@ -39,6 +70,9 @@ a{
       padding: 2rem;
       box-sizing: border-box;
     }
+    // & > div {
+    //   position: relative;
+    // }
     & img{
       width: 10vw;
       @media (min-width: 301px) and (max-width: 500px){
@@ -159,7 +193,7 @@ a{
   }
 }
 .demo{
-  // width: 100vw;
+  height: 100vh;
   @media (min-width: 301px) and (max-width: 500px){
     width: 100%;
     margin-top: 2rem;
